Added env to test.yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,8 @@ on:
 
 env:
   FOUNDRY_PROFILE: ci
+  IDRX_TOKEN_ADDRESS: 0x31c0C6e0F048d259Cd8597e1e3594F842555b235
+  VERIFUND_SBT_ADDRESS: 0x388878A2e2c404a2567c070a4C39D9A75EFFeb61
 
 jobs:
   check:
