--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,14 @@
+# Private key for deploying contracts
+PRIVATE_KEY=your_private_key_here
+
+# Etherscan API key for contract verification
+ETHERSCAN_KEY=your_etherscan_api_key_here
+
+# Contract addresses (set after deployment)
 IDRX_TOKEN_ADDRESS=0x1234567890abcdef1234567890abcdef12345678
 CAMPAIGN_FACTORY_ADDRESS=0x1234567890abcdef1234567890abcdef12345678
 VERIFUND_SBT_ADDRESS=0x1234567890abcdef1234567890abcdef12345678
+
+# RPC URLs (optional, for custom networks)
+# MAINNET_RPC_URL=https://your-mainnet-rpc-url
+# TESTNET_RPC_URL=https://your-testnet-rpc-url
